# WangYiLearn

./: .gitignore  CMakeLists.txt
1.1.1-method/: LS3Method.cpp
1.1.2-Linux-Memory-Pointer-array/: LS1.cpp
1.1.3-struct-union/: LS113.cpp
1.2-syntax/1.2.1-class/: Student.cpp  Student.h  extends.h  extendsDemo.cpp  main.cpp
1.2-syntax/1.2.2-polymorphic/: test1.cpp
1.2-syntax/1.2.3-object/: Status.h  objectsCreating.cpp
1.3function/: F10ten.cpp  F11.cpp  F12.cpp  F13.cpp  F14.cpp  F15.cpp  F16.cpp  F17.cpp  F18.cpp  F19.cpp  F1One.cpp  F20.cpp  F21.cpp  F22.cpp  F23.cpp  F24.cpp  F2Two.cpp  F3Thr.cpp  F4Four.cpp  F5Five.cpp  F6Six.cpp  F7Seven.cpp  F8eight.cpp  F9nine.cpp
include/: Student.h  Teacher.h
src/: Student.cpp  Teacher.cpp  main.cpp
